erDiagram

    PERSONA ||--o| ALUMNO : "1 a 0..1"
    PERSONA ||--o| RESPONSABLE : "1 a 0..1"
    PERSONA ||--o| USUARIO : "1 a 0..1"

    ALUMNO }|--|{ RESPONSABLE : "1..2 a 1..N"

    ALUMNO ||--|{ MOVIMIENTO_ALUMNO : "1 a 1..N"

    ALUMNO ||--o{ CONDICION_PARTICULAR_CUOTA : "1 a 0..N"

    ALUMNO ||--o{ OBLIGACION_PAGO : "1 a 0..N"

    OBLIGACION_PAGO ||--o| CUOTA : "puede ser"
    OBLIGACION_PAGO ||--o| MATRICULA : "puede ser"
    OBLIGACION_PAGO ||--o| COBRO_EXTRAORDINARIO : "puede ser"

    CONFIGURACION_CUOTA ||--o{ CUOTA : "1 a 0..N"

    EVENTO o|--o{ COBRO_EXTRAORDINARIO : "0..1 a 0..N"
    PEDIDO_INDUMENTARIA o|--|| COBRO_EXTRAORDINARIO : "0..1 a 1"

    ALUMNO ||--o{ PAGO : "1 a 0..N"

    PAGO ||--|{ APLICACION_PAGO : "1 a 1..N"

    OBLIGACION_PAGO ||--o{ APLICACION_PAGO : "1 a 0..N"

    PAGO ||--o| RECIBO : "1 a 0..1"

    PREINSCRIPCION {
        string fecha
        string observaciones
        string datos_alumno
        string datos_responsables
    }
